wellesleynet/roles/k8s/files/joplin.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: joplin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin
  serviceName: "joplin"
  template:
    metadata:
      labels:
        app: joplin
    spec:
      containers:
      - image: joplin/server:2.9.7-beta
        imagePullPolicy: Always
        name: joplin
        ports:
        - containerPort: 22300
      - image: postgres:14.5-alpine
        imagePullPolicy: Always
        name: joplin-postgres
        volumeMounts:
        - name: joplin
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command:
            - ls
            - /var/lib/postgresql/data/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: joplin
        persistentVolumeClaim:
          claimName: joplin
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: joplin
spec:
  selector:
    app: joplin
  ports:
  - name: joplin
    port: 80
    protocol: TCP
    targetPort: 22300
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 16m
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: joplin.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: joplin
            port:
              number: 80
  tls:
  - hosts:
    - joplin.kiski.co
    secretName: joplin-kiski-co-tls
